--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.1",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "react-scripts": "0.8.5",
+    "redux-devtools": "~3.3.2"
   },
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "axios": "^0.15.3",
+    "react": "~15.4.2",
+    "react-dom": "^15.4.2",
+    "react-paginate": "^4.1.1",
+    "react-redux": "~5.0.2",
+    "redux": "~3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
