--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "react": "~15.4.2",
+    "react-addons-create-fragment": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-paginate": "^4.1.1",
     "react-redux": "~5.0.2",
